--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LEGO Сайт</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="стили.CSS">
 </head>
 <body>
     <header>
@@ -49,4 +49,5 @@
         <p>Адрес: г. Москва, Китайгородский проезд, д. 7, стр. 2</p>
     </footer>
 </body>
+
 </html>
