--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LEGO Сайт</title>
-    <link rel="stylesheet" href="стили.CSS">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -51,3 +51,4 @@
 </body>
 
 </html>
+
